Closed Bug 508923 Opened 16 years ago Closed 16 years ago

‘nsIDocShell’ has not been declared in nsICanvasRenderingContextInternal.h

Categories

(Core :: Graphics: Canvas2D, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2b1

People

(Reporter: t.matsuu, Assigned: t.matsuu)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; ja-JP; rv:1.9.2a1pre) Gecko/20090729 Fedora/3.6a1pre-0.a1pre.2009072816.hg_4679ac688c56.fc11 Minefield/3.6a1pre Build Identifier: When compiling nsCanvasRenderingContextGL.cpp, I got the following error: In file included from nsCanvasRenderingContextGL.h:56, from nsCanvasRenderingContextGL.cpp:42: ../../../dist/include/nsICanvasRenderingContextInternal.h:65: error: 'nsIDocShell' has not been declared I suppose to include nsIDocShell.h in nsICanvasRenderingContextInternal.h. Reproducible: Always
Attached patch Possible fix.Splinter Review
Attachment #393073 - Flags: review?(tellrob)
Comment on attachment 393073 [details] [diff] [review] Possible fix. Thanks!
Attachment #393073 - Flags: review?(tellrob) → review+
Assignee: nobody → t.matsuu
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
OS: Linux → All
Hardware: x86 → All
Version: unspecified → Trunk
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: