Bug 508923 - ‘nsIDocShell’ has not been declared in nsICanvasRenderingContextInternal.h. r=robarnold